--- a/reactNativeNode/package.json
+++ b/reactNativeNode/package.json
@@ -18,9 +18,11 @@
     "react-native": "0.73.4",
     "react-native-gesture-handler": "^2.15.0",
     "react-native-reanimated": "^3.7.0",
+    "react-native-responsive-fontsize": "^0.5.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
+    "react-native-status-bar-height": "^2.6.0",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0"
